--- a/AlgoStudy/AlgoStudy/AlgoStudy.vcxproj.filters
+++ b/AlgoStudy/AlgoStudy/AlgoStudy.vcxproj.filters
@@ -30,10 +30,10 @@
     <ClCompile Include="assignment\Bae\DoubleListMain.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="assignment\ShinHyeJin\DoubleLinkedList.c">
+    <ClCompile Include="Stack.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="assignment\ShinHyeJin\Main.c">
+    <ClCompile Include="StackMain.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
@@ -44,7 +44,7 @@
     <ClInclude Include="DoubleLinkedList.h">
       <Filter>소스 파일</Filter>
     </ClInclude>
-    <ClInclude Include="assignment\ShinHyeJin\DoubleLinkedList.h">
+    <ClInclude Include="Stack.h">
       <Filter>소스 파일</Filter>
     </ClInclude>
   </ItemGroup>
