--- a/AlgoStudy/AlgoStudy/AlgoStudy.vcxproj.filters
+++ b/AlgoStudy/AlgoStudy/AlgoStudy.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="소스 파일\Assignment">
+      <UniqueIdentifier>{004b3131-0eaa-4c77-b81f-0fe2fb5590f6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LinkedList.c">
@@ -35,6 +38,15 @@
     </ClCompile>
     <ClCompile Include="StackMain.c">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="assignment\Baekjoon9012.c">
+      <Filter>소스 파일\Assignment</Filter>
+    </ClCompile>
+    <ClCompile Include="assignment\Baekjoon4949.c">
+      <Filter>소스 파일\Assignment</Filter>
+    </ClCompile>
+    <ClCompile Include="CalculatorByStack.c">
+      <Filter>소스 파일\Assignment</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
